force-app/main/default/objects/Industry2__c/Industry2__c.object-meta.xml
<CustomObject>
    <label>Industry</label>
    <nameField>
        <label>Industry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>