force-app/main/default/objects/Industry2__c/fields/Card_Brand_Registration_Required__c.field-meta.xml
<CustomField>
    <fullName>Card_Brand_Registration_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Brand Registration Required</label>
    <type>Checkbox</type>
</CustomField>