force-app/main/default/objects/Industry2__c/fields/Free_Trial_Prohibited__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_Prohibited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Trial Prohibited</label>
    <type>Checkbox</type>
</CustomField>