force-app/main/default/objects/Industry2__c/fields/Paid_Trial_Prohibited__c.field-meta.xml
<CustomField>
    <fullName>Paid_Trial_Prohibited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Trial Prohibited</label>
    <type>Checkbox</type>
</CustomField>