force-app/main/default/objects/Industry2__c/fields/Straight_Sale__c.field-meta.xml
<CustomField>
    <fullName>Straight_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Straight Sale</label>
    <type>Checkbox</type>
</CustomField>