force-app/main/default/objects/Industry2__c/fields/Subscription_Recurring_Billing__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Recurring_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription / Recurring Billing</label>
    <type>Checkbox</type>
</CustomField>