force-app/main/default/objects/Industry2__c/listViews/All_Industries.listView-meta.xml
<ListView>
    <fullName>All_Industries</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Free_Trial_Prohibited__c</columns>
    <columns>Processing_History_Required__c</columns>
    <columns>Paid_Trial_Prohibited__c</columns>
    <columns>Straight_Sale__c</columns>
    <columns>Subscription_Recurring_Billing__c</columns>
    <filterScope>Everything</filterScope>
    <label>Industries &amp; Qualifiers</label>
</ListView>